2008-01-30 svu

	* NEWS: preparing 3.4

2007-10-06 svu

	* libxklavier/Makefile.am, libxklavier/xklavier_config.c,
	libxklavier/xklavier_config_i18n.c, libxklavier/xklavier_private.h,
	xkl_config_registry.h, xklavier_private.h: now, only gettext is doing
	string translation. No more hackish code in that area.

2007-10-03 svu

	* libxklavier/xklavier_config.c: using xkeyboard-config domain for
	translation, dealing with lowfat base.xml

2007-09-29 svu

	* tests/test_monitor.c: tracking the config

2007-09-04 svu

	* configure.in: indicate gtkdoc enabling
	* Makefile.am: make distcheck works
	* NEWS: preparing 3.3

2007-05-20 svu

	* libxklavier/xklavier.c, libxklavier/xklavier_private.h,
	libxklavier/xklavier_xkb.c, libxklavier/xklavier_xmm.c,
	tests/test_monitor.c: added missing indicator names function (thanks
	to Andriy Rysin for spotting)

2007-05-16 svu

	* configure.in: incrementing the version

2007-05-13 svu

	* libxklavier/xkl_config_item.h, libxklavier/xklavier_config.c,
	tests/test_config.c: processing "vendor" element, if specified

2007-03-22 svu

	* configure.in: make build process a bit smarter (in relation to
	xkbcomp), preparing 3.2

2007-03-19 svu

	* libxklavier/xklavier_toplevel.c: fixing the default group processing.
	Closing http://bugzilla.gnome.org/show_bug.cgi?id=414269

2007-02-23 svu

	* libxklavier/xklavier.c: workaround for xlib ambiguous behavior.
	http://bugzilla.gnome.org/show_bug.cgi?id=392853

2007-02-11 svu

	* configure.in: process empty x_libraries correctly, fixing
	http://bugzilla.gnome.org/show_bug.cgi?id=343762

2006-11-03 svu

	* libxklavier/xklavier_config.c: more accurate dealing with empty
	nodeset, hopefully fixing
	http://bugzilla.gnome.org/show_bug.cgi?id=370038

2006-10-16 svu

	* configure.in, NEWS: preparing release 3.1

2006-10-15 svu

	* libxklavier/xklavier.c, libxklavier/xklavier_evt.c,
	libxklavier/xklavier_evt_xkb.c, libxklavier/xklavier_evt_xmm.c,